--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
+    "dist": "electron-builder",
     "dev": "electron . --local --dev"
   },
   "keywords": [
@@ -16,12 +17,13 @@
   ],
   "author": "GitHub",
   "license": "CC0-1.0",
-  "devDependencies": {},
+  "devDependencies": {
+    "electron": "^6.0.9",
+    "electron-builder": "^21.2.0"
+  },
   "dependencies": {
     "@babel/polyfill": "^7.6.0",
     "@babel/register": "^7.6.0",
-    "electron": "^6.0.9",
-    "electron-builder": "^21.2.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   }
