--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
   "scripts": {
     "start": "electron .",
     "dist": "electron-builder",
+    "build": "react-scripts build",
     "dev": "electron . --local --dev"
+  },
+  "build": {
+    "files": [
+      "build/**/*"
+    ]
   },
   "keywords": [
     "Electron",
@@ -19,6 +25,7 @@
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "^6.0.9",
+    "react-scripts": "^3.1.2",
     "electron-builder": "^21.2.0"
   },
   "dependencies": {
@@ -26,5 +33,17 @@
     "@babel/register": "^7.6.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
