--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "my-app",
+  "name": "A4_Print",
   "description": "Electron + Create React App + Electron Builder",
   "version": "0.1.0",
   "private": true,
   "author": {
-    "name": "Your Name",
-    "email": "your.email@domain.com",
+    "name": "mahongquan",
+    "email": "mahongquan@sina.com",
     "url": "https://your-website.com"
   },
   "build": {
+    "asar":"false",
     "appId": "com.my-website.my-app",
-    "productName": "MyApp",
+    "productName": "A4_Print",
     "copyright": "Copyright © 2019 ${author}",
     "files": [
       "build/**/*",
@@ -21,6 +22,28 @@
     }
   },
   "dependencies": {
+        "@babel/core": "^7.2.0",
+    "@babel/plugin-proposal-class-properties": "^7.2.1",
+    "@babel/plugin-proposal-decorators": "^7.3.0",
+    "@babel/plugin-proposal-do-expressions": "^7.2.0",
+    "@babel/plugin-proposal-export-default-from": "^7.2.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
+    "@babel/plugin-proposal-logical-assignment-operators": "^7.2.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.2.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
+    "@babel/plugin-proposal-pipeline-operator": "^7.2.0",
+    "@babel/plugin-syntax-jsx": "^7.2.0",
+    "@babel/plugin-transform-flow-strip-types": "^7.2.0",
+    "@babel/plugin-transform-react-display-name": "^7.2.0",
+    "@babel/plugin-transform-react-jsx": "^7.2.0",
+    "@babel/plugin-transform-react-jsx-self": "^7.2.0",
+    "@babel/plugin-transform-react-jsx-source": "^7.2.0",
+    "@babel/plugin-transform-typescript": "^7.2.0",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.2.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.1.0",
+    "@babel/register": "^7.0.0", 
     "electron-is-dev": "^1.0.1",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
@@ -29,6 +52,7 @@
   "homepage": "./",
   "main": "public/electron.js",
   "scripts": {
+    "local":"node_modules/.bin/electron . --local",
     "start": "rescripts start",
     "build": "rescripts build",
     "test": "rescripts test",
