--- a/package.json
+++ b/package.json
@@ -45,9 +45,8 @@
     "@babel/preset-typescript": "^7.1.0",
     "@babel/register": "^7.0.0", 
     "electron-is-dev": "^1.0.1",
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
-    "react-scripts": "2.1.5"
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0"
   },
   "homepage": "./",
   "main": "public/electron.js",
@@ -72,10 +71,11 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "react-scripts": "2.1.5",
     "@rescripts/cli": "^0.0.10",
     "@rescripts/rescript-env": "^0.0.5",
     "concurrently": "^4.1.0",
-    "electron": "^4.0.6",
+    "electron": "^6.0.10",
     "electron-builder": "^20.38.5",
     "typescript": "^3.3.3333",
     "wait-on": "^3.2.0"
