--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "A4_Print",
   "description": "Electron + Create React App + Electron Builder",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "author": {
     "name": "mahongquan",
@@ -9,7 +9,7 @@
     "url": "https://your-website.com"
   },
   "build": {
-    "asar":"false",
+    "asar": "false",
     "appId": "com.my-website.my-app",
     "productName": "A4_Print",
     "copyright": "Copyright © 2019 ${author}",
@@ -22,19 +22,19 @@
     }
   },
   "dependencies": {
-        "@babel/core": "^7.11.6",
+    "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-proposal-decorators": "^7.10.5",
     "@babel/plugin-proposal-do-expressions": "^7.10.4",
     "@babel/plugin-proposal-export-default-from": "^7.10.4",
     "@babel/plugin-proposal-export-namespace-from": "^7.10.4",
-    "@babel/plugin-proposal-logical-assignment-operators":"^7.11.0",
+    "@babel/plugin-proposal-logical-assignment-operators": "^7.11.0",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.4",
     "@babel/plugin-proposal-optional-chaining": "^7.11.0",
     "@babel/plugin-proposal-pipeline-operator": "^7.10.5",
-    "@babel/plugin-syntax-jsx":"^7.10.4",
+    "@babel/plugin-syntax-jsx": "^7.10.4",
     "@babel/plugin-transform-flow-strip-types": "^7.10.4",
-    "@babel/plugin-transform-react-display-name":"^7.10.4",
+    "@babel/plugin-transform-react-display-name": "^7.10.4",
     "@babel/plugin-transform-react-jsx": "^7.10.4",
     "@babel/plugin-transform-react-jsx-self": "^7.10.4",
     "@babel/plugin-transform-react-jsx-source": "^7.10.5",
@@ -43,15 +43,16 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
-    "@babel/register": "^7.11.5", 
+    "@babel/register": "^7.11.5",
     "electron-is-dev": "^1.2.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "sprintf": "^0.1.5"
   },
   "homepage": "./",
   "main": "public/electron.js",
   "scripts": {
-    "local":"node_modules/.bin/electron . --local",
+    "local": "node_modules/.bin/electron . --local",
     "start": "rescripts start",
     "build": "rescripts build",
     "test": "rescripts test",
@@ -71,12 +72,12 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "react-scripts": "2.1.5",
     "@rescripts/cli": "^0.0.10",
     "@rescripts/rescript-env": "^0.0.5",
     "concurrently": "^4.1.0",
-    "electron": "^9.3.0",
+    "electron": "^9.3.1",
     "electron-builder": "^20.38.5",
+    "react-scripts": "2.1.5",
     "typescript": "^3.9.7",
     "wait-on": "^3.2.0"
   }
