--- a/package.json
+++ b/package.json
@@ -22,32 +22,31 @@
     }
   },
   "dependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-proposal-decorators": "^7.12.1",
-    "@babel/plugin-proposal-do-expressions": "^7.12.1",
-    "@babel/plugin-proposal-export-default-from": "^7.12.1",
-    "@babel/plugin-proposal-export-namespace-from": "^7.12.1",
-    "@babel/plugin-proposal-logical-assignment-operators": "^7.12.1",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.1",
-    "@babel/plugin-proposal-optional-chaining": "^7.12.1",
-    "@babel/plugin-proposal-pipeline-operator": "^7.12.1",
-    "@babel/plugin-syntax-jsx": "^7.12.1",
-    "@babel/plugin-transform-flow-strip-types": "^7.12.1",
-    "@babel/plugin-transform-react-display-name": "^7.12.1",
-    "@babel/plugin-transform-react-jsx": "^7.12.1",
-    "@babel/plugin-transform-react-jsx-self": "^7.12.1",
-    "@babel/plugin-transform-react-jsx-source": "^7.12.1",
-    "@babel/plugin-transform-typescript": "^7.12.1",
-    "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/preset-react": "^7.12.1",
-    "@babel/preset-typescript": "^7.12.1",
-    "@babel/register": "^7.12.1",
-    "electron-is-dev": "^1.2.0",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "sprintf": "^0.1.5"
+    "@babel/core": "latest",
+    "@babel/plugin-proposal-class-properties": "latest",
+    "@babel/plugin-proposal-decorators": "latest",
+    "@babel/plugin-proposal-do-expressions": "latest",
+    "@babel/plugin-proposal-export-default-from": "latest",
+    "@babel/plugin-proposal-export-namespace-from": "latest",
+    "@babel/plugin-proposal-logical-assignment-operators": "latest",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "latest",
+    "@babel/plugin-proposal-optional-chaining": "latest",
+    "@babel/plugin-proposal-pipeline-operator": "latest",
+    "@babel/plugin-syntax-jsx": "latest",
+    "@babel/plugin-transform-flow-strip-types": "latest",
+    "@babel/plugin-transform-react-display-name": "latest",
+    "@babel/plugin-transform-react-jsx": "latest",
+    "@babel/plugin-transform-react-jsx-self": "latest",
+    "@babel/plugin-transform-react-jsx-source": "latest",
+    "@babel/plugin-transform-typescript": "latest",
+    "@babel/polyfill": "latest",
+    "@babel/preset-env": "latest",
+    "@babel/preset-react": "latest",
+    "@babel/preset-typescript": "latest",
+    "@babel/register": "latest",
+    "react": "latest",
+    "react-dom": "latest",
+    "sprintf": "latest"
   },
   "homepage": "./",
   "main": "public/electron.js",
@@ -72,13 +71,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@rescripts/cli": "^0.0.10",
-    "@rescripts/rescript-env": "^0.0.5",
-    "concurrently": "^4.1.0",
-    "electron": "^10.1.4",
-    "electron-builder": "^20.38.5",
-    "react-scripts": "2.1.5",
-    "typescript": "^3.9.7",
-    "wait-on": "^3.2.0"
+    "electron": "latest",
+    "electron-builder": "latest",
+    "react-scripts": "latest"
   }
 }
