--- a/package.json
+++ b/package.json
@@ -22,31 +22,9 @@
     }
   },
   "dependencies": {
-    "@babel/core": "latest",
-    "@babel/plugin-proposal-class-properties": "latest",
-    "@babel/plugin-proposal-decorators": "latest",
-    "@babel/plugin-proposal-do-expressions": "latest",
-    "@babel/plugin-proposal-export-default-from": "latest",
-    "@babel/plugin-proposal-export-namespace-from": "latest",
-    "@babel/plugin-proposal-logical-assignment-operators": "latest",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "latest",
-    "@babel/plugin-proposal-optional-chaining": "latest",
-    "@babel/plugin-proposal-pipeline-operator": "latest",
-    "@babel/plugin-syntax-jsx": "latest",
-    "@babel/plugin-transform-flow-strip-types": "latest",
-    "@babel/plugin-transform-react-display-name": "latest",
-    "@babel/plugin-transform-react-jsx": "latest",
-    "@babel/plugin-transform-react-jsx-self": "latest",
-    "@babel/plugin-transform-react-jsx-source": "latest",
-    "@babel/plugin-transform-typescript": "latest",
-    "@babel/polyfill": "latest",
-    "@babel/preset-env": "latest",
-    "@babel/preset-react": "latest",
-    "@babel/preset-typescript": "latest",
-    "@babel/register": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "sprintf": "latest"
+    "printj":"latest"
   },
   "homepage": "./",
   "main": "public/electron.js",
